app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
    spec:
      containers:
      - env:
        - name: DB_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: endpoint
              name: silly-demo
        - name: DB_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: silly-demo
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: silly-demo
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: password
              name: silly-demo
        - name: DB_NAME
          value: silly-demo
        image: ghcr.io/vfarcic/silly-demo:1.4.123
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: silly-demo
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
